Add new project-4 en/pl

--- a/index-en.html
+++ b/index-en.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -20,8 +20,8 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                        aria-controls="navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -46,9 +46,9 @@
                     </ul>
                 </div>
             </div>
-            <a class="change-language en active" href="index-en.html">EN</a> 
-            <a href="index.html" class="change-language pl">PL</a>           
-        </nav>        
+            <a class="change-language en active" href="index-en.html">EN</a>
+            <a href="index.html" class="change-language pl">PL</a>
+        </nav>
         <main>
             <div class="slogan">
                 <h1>Katarzyna Trześniewska</h1>
@@ -70,29 +70,41 @@
             <div class="about-text">
                 <p>My name is
                     <strong>Katarzyna Trześniewska</strong>. Economist by education, while
-                    <strong>Front-end Developer</strong> by passion. Fascinated with the <strong>visual</strong> possibilities of current <strong>web technologies</strong>.
+                    <strong>Front-end Developer</strong> by passion. Fascinated with the <strong>visual</strong>
+                    possibilities of current <strong>web technologies</strong>.
                     Fun of cross-country skiing and <strong>board games</strong> lover.
                 </p>
-                <p><strong>Development</strong> in all areas of my life is a source of satisfaction for me. I’m aware that I still have a lot
+                <p><strong>Development</strong> in all areas of my life is a source of satisfaction for me. I’m aware
+                    that I still have a lot
                     of learning to do, but that's gives me a lot of <strong>motivation to work</strong>.</p>
                 <p> Currently I live in Jelenia Gora. I would like to start as a <strong>Junior Front-end Developer</strong>.</p>
             </div>
             <div class="about-text not-visible">
                 <br>
-                <p>A year ago I decided to change my career path towards <strong>IT</strong>. I decided to move to <strong>Front-end</strong>, because I'm sensitive
-                    to <strong>the aesthetics</strong> and <strong>graphic form</strong> of the content presented on the web. I also like to develop the visual
+                <p>A year ago I decided to change my career path towards <strong>IT</strong>. I decided to move to
+                    <strong>Front-end</strong>, because I'm sensitive
+                    to <strong>the aesthetics</strong> and <strong>graphic form</strong> of the content presented on
+                    the web. I also like to develop the visual
                     effects of my projects.</p>
-                <p>In May of this year I completed an intensive <strong>Front End Developer bootcamp</strong> in Kodilla, run by Codemy S.A.
-                    in Wrocław. This three-month online course gave me a solid basis and allowed me to learn the <strong>currently</strong>
-                    used <strong>web technologies</strong>. I like very much <strong>CSS3</strong>, which with <strong>Sass</strong> offers great opportunities for creating
-                    styles and animations. Learning <strong>JavaScript</strong> and <strong>jQuery</strong> opened me a Word of <strong>scripting languages</strong>, which
+                <p>In May of this year I completed an intensive <strong>Front End Developer bootcamp</strong> in
+                    Kodilla, run by Codemy S.A.
+                    in Wrocław. This three-month online course gave me a solid basis and allowed me to learn the
+                    <strong>currently</strong>
+                    used <strong>web technologies</strong>. I like very much <strong>CSS3</strong>, which with <strong>Sass</strong>
+                    offers great opportunities for creating
+                    styles and animations. Learning <strong>JavaScript</strong> and <strong>jQuery</strong> opened me a
+                    Word of <strong>scripting languages</strong>, which
                     inspired me a lot. I am going to explore it. I'm currently learn <strong>Angular</strong>.</p>
-                <p>I work also with: <strong>Visual Studio Code</strong>, version control system <strong>Git</strong>,<strong>NPM</strong>: task runner including creation
+                <p>I work also with: <strong>Visual Studio Code</strong>, version control system <strong>Git</strong>,<strong>NPM</strong>:
+                    task runner including creation
                     of project structure, tests of code, compilation of SASS on CSS and adding necessary prefixes.</p>
-                <p><strong>Programming</strong> has become one of my passions. Creating <strong>web applications</strong> and giving them beauty and the possibility
-                    to <strong>interact</strong> with the user get me a lot of fun. I always try to <strong>look for the solutions</strong> of the problems.
+                <p><strong>Programming</strong> has become one of my passions. Creating <strong>web applications</strong>
+                    and giving them beauty and the possibility
+                    to <strong>interact</strong> with the user get me a lot of fun. I always try to <strong>look for
+                        the solutions</strong> of the problems.
                     This allows me to discover completely new possibilities and it gives me the greatest <strong>satisfaction</strong>.</p>
-                <p>Below I presented my <strong>projects</strong>. I still <strong>develop and improve</strong> them. I encourage you to see them. If you have
+                <p>Below I presented my <strong>projects</strong>. I still <strong>develop and improve</strong> them. I
+                    encourage you to see them. If you have
                     any comments, please <strong>contact me</strong>!
                 </p>
             </div>
@@ -148,8 +160,10 @@
                     <div class="details">
                         <div class="description">
                             <h4>Slice JPG to HTML</h4>
-                            <p>The project was made as part of a bootcamp. Self-programmed template in HTML and CSS based on
-                                the received JPG file. The possibilities used here include Flexbox, Transition and pseudo-clasess.
+                            <p>The project was made as part of a bootcamp. Self-programmed template in HTML and CSS
+                                based on
+                                the received JPG file. The possibilities used here include Flexbox, Transition and
+                                pseudo-clasess.
                                 The website is RWD thanks to the use of Media queries.
                             </p>
                             <i class="devicon-html5-plain-wordmark"></i>
@@ -172,10 +186,14 @@
                     <div class="details">
                         <div class="description">
                             <h4>Slice PSD to HTML</h4>
-                            <p>Template based on a PSD file. Self—programmed project in HTML and CSS template with use Sass,
-                                Bootstrap, JS and jQuery. Used possibilities of Sass: variables, nesting and mixins. Bootstrap’s
-                                carousel and grid. JS and jQuery made it possible to get interactivity of selected buttons
-                                and animation of icons. RWD made thanks to Media queries and Bootstrap’s grid. The project
+                            <p>Template based on a PSD file. Self—programmed project in HTML and CSS template with use
+                                Sass,
+                                Bootstrap, JS and jQuery. Used possibilities of Sass: variables, nesting and mixins.
+                                Bootstrap’s
+                                carousel and grid. JS and jQuery made it possible to get interactivity of selected
+                                buttons
+                                and animation of icons. RWD made thanks to Media queries and Bootstrap’s grid. The
+                                project
                                 has a Git version control.
                             </p>
                             <i class="devicon-html5-plain-wordmark"></i>
@@ -202,9 +220,9 @@
                     <div class="details">
                         <div class="description">
                             <h4>Form reservation</h4>
-                            <p>The project allow me to practice the ability to create forms using Bootstrap and jQuery. The
-                                form has validation on the filling side. The project is RWD. Styles created by compiled Sass
-                                to CSS. The project has a version control system Git. . </p>
+                            <p>The project allow me to practice the ability to create forms using Bootstrap and jQuery.
+                                The form has validation on the filling side. The project is RWD. Styles created by compiled
+                                Sass to CSS. The project has a version control system Git. . </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
@@ -225,13 +243,41 @@
                     </div>
                 </div>
                 <div class="project-4">
+                    <img src="images/projects/Bootstrap4_template.png" alt="Bootstrap4 template">
+                    <div class="details">
+                        <div class="description">
+                            <h4>Bootsrap 4 template</h4>
+                            <p>The project is made with Bootsrap 4. The style and positioning of the template elements
+                                is used main with Bootsrap classes. Only a few classes have
+                                been created in Sass. RWD is created by using a new Bootstrap grid system based on Flexbox.</p>
+                            <i class="devicon-html5-plain-wordmark"></i>
+                            <i class="devicon-css3-plain-wordmark"></i>
+                            <i class="devicon-bootstrap-plain"></i>
+                            <i class="devicon-git-plain"></i>
+                        </div>
+                        <a href="https://katarzynka1234.github.io/website_template_Bootstrap_4/." target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-desktop"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/katarzynka1234/website_template_Bootstrap_4" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-code"></i>
+                            </button>
+                        </a>
+                    </div>
+                </div>
+                <div class="project-5">
                     <img src="images/projects/Rock_Paper_Scissors.png" alt="Rock,Paper, Scissors">
                     <div class="details">
                         <div class="description">
                             <h4>Stone, Paper, Scissors</h4>
-                            <p>Application for playing the popular game. The game is programmed as part of a bootcamp with using
-                                Bootstrap and JavaScript. The project allowed me to practice JS with creating variables,
-                                conditional instruction if, swich and defining functions as well as manipulation of DOM elements.
+                            <p>Application for playing the popular game. The game is programmed as part of a bootcamp
+                                with using
+                                Bootstrap and JavaScript. The project allowed me to practice JS with creating
+                                variables,
+                                conditional instruction if, swich and defining functions as well as manipulation of DOM
+                                elements.
                             </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
@@ -251,14 +297,17 @@
                         </a>
                     </div>
                 </div>
-                <div class="project-5">
+                <div class="project-6">
                     <img src="images/projects/KanbanBoard.png" alt="Kanban Board">
                     <div class="details">
                         <div class="description">
                             <h4>Kanban Board</h4>
-                            <p>Kanban Board is used to manage tasks and projects. The project has been programmed during the
-                                bootcamp. The application uses jQuery and jQueryUI. Layout and graphics designed by myself
-                                with Sass compiled to CSS. The project allow me to learn the basics of communication with
+                            <p>Kanban Board is used to manage tasks and projects. The project has been programmed
+                                during the
+                                bootcamp. The application uses jQuery and jQueryUI. Layout and graphics designed by
+                                myself
+                                with Sass compiled to CSS. The project allow me to learn the basics of communication
+                                with
                                 the server by Ajax and API.
                             </p>
                             <i class="devicon-html5-plain-wordmark"></i>
@@ -289,31 +338,31 @@
             <div class="container">
                 <div class="contact-box">
                     <h2>Contact</h2>
-                        <p>
-                            <i class="fas fa-globe"></i> trzesniewska.eu
-                        </p>
-                        <p>
-                            <i class="far fa-envelope"></i> katarzynka.f@gmail.com
-                        </p>
-                        <p>
-                            <i class="fas fa-phone"></i> +48 669380297
-                        </p>
+                    <p>
+                        <i class="fas fa-globe"></i> trzesniewska.eu
+                    </p>
+                    <p>
+                        <i class="far fa-envelope"></i> katarzynka.f@gmail.com
+                    </p>
+                    <p>
+                        <i class="fas fa-phone"></i> +48 669380297
+                    </p>
 
-                        <a href="https://www.linkedin.com/in/katarzynatrzesniewska/" target="_blank">
-                            <button>
-                                <i class="fa fa-linkedin"></i>
-                            </button>
-                        </a>
-                        <a href="https://github.com/katarzynka1234" target="_blank">
-                            <button>
-                                <i class="fa fa-github-square"></i>
-                            </button>
-                        </a>
-                        <a href="https://www.facebook.com/katarzyna.fecyk?ref=bookmarks" target="_blank">
-                            <button>
-                                <i class="fa fa-facebook-square"></i>
-                            </button>
-                        </a>
+                    <a href="https://www.linkedin.com/in/katarzynatrzesniewska/" target="_blank">
+                        <button>
+                            <i class="fa fa-linkedin"></i>
+                        </button>
+                    </a>
+                    <a href="https://github.com/katarzynka1234" target="_blank">
+                        <button>
+                            <i class="fa fa-github-square"></i>
+                        </button>
+                    </a>
+                    <a href="https://www.facebook.com/katarzyna.fecyk?ref=bookmarks" target="_blank">
+                        <button>
+                            <i class="fa fa-facebook-square"></i>
+                        </button>
+                    </a>
                 </div>
 
             </div>
