--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                        aria-controls="navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -80,7 +80,8 @@
                     <strong>technologii webowych</strong>. Amatorka biegów narciarskich oraz miłośniczka
                     <strong>gier planszowych</strong>.</p>
                 <p>Ciągły
-                    <strong>rozwój</strong> we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem świadoma,
+                    <strong>rozwój</strong> we wszystkich płaszczyznach życia jest dla mnie źródłem satysfakcji. Jestem
+                    świadoma,
                     że przede mną jeszcze wiele nauki ale właśnie to daje mi ogromną
                     <strong>motywację do działania</strong>.</p>
                 <p>Aktualnie mieszkam w Jeleniej Górze. Chciałabym rozpocząć pracę jako
@@ -96,7 +97,8 @@
                     <strong>formę graficzną</strong> prezentowanych w sieci treści. Lubię również rozwijać
                     <strong>wizualne</strong> efekty swoich projektów.</p>
                 <p>W maju tego roku ukończyłam intensywny
-                    <strong>bootcamp ‘Front-end Developer’</strong> w Kodilli. Trzymiesięczny kurs dał mi solidne podstawy oraz pozwolił
+                    <strong>bootcamp ‘Front-end Developer’</strong> w Kodilli. Trzymiesięczny kurs dał mi solidne
+                    podstawy oraz pozwolił
                     poznać
                     <strong>aktualnie</strong> stosowane
                     <strong>technologie webowe</strong>. Najlepiej odnajduję się w języku
@@ -104,20 +106,23 @@
                     <strong>SASS</strong> oferuje ogromne możliwości tworzenia stylów oraz animacji. Poznanie
                     <strong>JavaScript</strong> oraz
                     <strong>jQuery</strong> otworzyło przed mną świat
-                    <strong>języków skryptowych</strong>, który mnie bardzo zainspirował. Mam zamiar go coraz bardziej zgłębiać.
+                    <strong>języków skryptowych</strong>, który mnie bardzo zainspirował. Mam zamiar go coraz bardziej
+                    zgłębiać.
                     Aktualnie poznaję i wprowadzam do projektów
                     <strong>AngularJS</strong>.</p>
                 <p> Moje
                     <strong>środowisko developerskie</strong> to aktualnie:
                     <strong>Visual Studio Code</strong> (pracowałam również na SublimeText3); system kontroli wersji
                     <strong>Git</strong>;
-                    <strong>NPM</strong>: task runner obejmujący automatyczne tworzenie struktury projektu, testy kodu, kompilację
+                    <strong>NPM</strong>: task runner obejmujący automatyczne tworzenie struktury projektu, testy kodu,
+                    kompilację
                     SASS na CSS oraz dodanie niezbędnych prefixów.</p>
                 <p>
                     <strong>Programowanie</strong> stało się jedną z moich pasji. Tworzenie
                     <strong>aplikacji webowych</strong> i nadawanie im piękna oraz możliwości
                     <strong>interakcji</strong> z użytkownikiem sprawia mi dużo radości. Zawsze
-                    <strong>szukam rozwiązań</strong> napotkanych problemów, dzięki czemu odkrywam całkiem nowe możliwości i to daje
+                    <strong>szukam rozwiązań</strong> napotkanych problemów, dzięki czemu odkrywam całkiem nowe
+                    możliwości i to daje
                     największą mi
                     <strong>satysfakcję</strong>.</p>
                 <p>Ponieżej zaprezentowałam swoje dotychczasowe
@@ -178,8 +183,10 @@
                     <div class="details">
                         <div class="description">
                             <h4>Cięcie szablonu JPG do HTML</h4>
-                            <p>Projekt został wykonany w ramach bootcampu. Samodzielnie zaprogramowany szablon w HTML i CSS
-                                na podstawie otrzymanego pliku JPG. Wykorzystane tu możliwości to m.in. Flexbox, Transition,
+                            <p>Projekt został wykonany w ramach bootcampu. Samodzielnie zaprogramowany szablon w HTML i
+                                CSS
+                                na podstawie otrzymanego pliku JPG. Wykorzystane tu możliwości to m.in. Flexbox,
+                                Transition,
                                 pseudoklasy. Strona jest responsywna dzięki użyciu Media queries. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
@@ -204,10 +211,14 @@
                     <div class="details">
                         <div class="description">
                             <h4>Cięcie szablonu PSD do HTML</h4>
-                            <p>Szablon wykonany na podstawie otrzymanego pliku w formacie PSD. Samodzielnie zaprogramowany w
-                                HTML i CSS szablon przy użyciu Sass, Bootstrap, JS oraz jQuery. Wykorzystane możliwości Sass
-                                to: variables, nesting oraz mixins. Carousel oraz Grid z Bootstrapa. JS oraz jQuery pozwoliły
-                                uzyskać interaktywność wybranych przycisków oraz animacji ikon. Responsywność strony uzyskana
+                            <p>Szablon wykonany na podstawie otrzymanego pliku w formacie PSD. Samodzielnie
+                                zaprogramowany w
+                                HTML i CSS szablon przy użyciu Sass, Bootstrap, JS oraz jQuery. Wykorzystane możliwości
+                                Sass
+                                to: variables, nesting oraz mixins. Carousel oraz Grid z Bootstrapa. JS oraz jQuery
+                                pozwoliły
+                                uzyskać interaktywność wybranych przycisków oraz animacji ikon. Responsywność strony
+                                uzyskana
                                 dzięki Bootstrap Grid oraz Media queries. Projekt wykonany z kontrolą wersji Git. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
@@ -233,8 +244,10 @@
                     <div class="details">
                         <div class="description">
                             <h4>Formularz rezerwacji</h4>
-                            <p>Projekt służący przećwiczeniu możliwości tworzenia formularzy z użyciem Bootstrap oraz jQuery.
-                                Responsywny z bieżącą walidacją wypełnienia pól. Style CSS utworzone za pomocą preprocesora
+                            <p>Projekt służący przećwiczeniu możliwości tworzenia formularzy z użyciem Bootstrap oraz
+                                jQuery.
+                                Responsywny z bieżącą walidacją wypełnienia pól. Style CSS utworzone za pomocą
+                                preprocesora
                                 Sass. W projekcie prowadzony jest system kontroli wersji. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
@@ -256,12 +269,39 @@
                     </div>
                 </div>
                 <div class="project-4">
+                        <img src="images/projects/Bootstrap4_template.png" alt="Bootstrap4 template">
+                        <div class="details">
+                            <div class="description">
+                                <h4>Szablon w Bootstrap 4</h4>
+                                <p>Projekt jest wykonany za pomocą Bootsrap 4. Style oraz pozycjonowanie elementów szablonu
+                                    jest uzykane praktycznie całkowice za pomocą klas Bootsrapa. W projekcie utworzono tylko kilka
+                                    własnych klas w Sass. RWD utworzone za pomocą systemu grid Bootstrapa oprtego o Flexbox.</p>
+                                <i class="devicon-html5-plain-wordmark"></i>
+                                <i class="devicon-css3-plain-wordmark"></i>
+                                <i class="devicon-bootstrap-plain"></i>
+                                <i class="devicon-git-plain"></i>
+                            </div>
+                            <a href="https://katarzynka1234.github.io/website_template_Bootstrap_4/." target="_blank">
+                                <button class="icon-link">
+                                    <i class="fa fa-desktop"></i>
+                                </button>
+                            </a>
+                            <a href="https://github.com/katarzynka1234/website_template_Bootstrap_4" target="_blank">
+                                <button class="icon-link">
+                                    <i class="fa fa-code"></i>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                <div class="project-5">
                     <img src="images/projects/Rock_Paper_Scissors.png" alt="Rock,Papaer, Scissors">
                     <div class="details">
                         <div class="description">
                             <h4>Kamień, Papier, Nożyce</h4>
-                            <p>Aplikacja do popularnej gry. Aplikacja napisana w ramach bootcampu z wykorzystaniem Bootstrapa
-                                oraz JavaScript. Projekt pozwolił mi przećwiczyć tworzenie zmiennych, instrukcji warunkowych
+                            <p>Aplikacja do popularnej gry. Aplikacja napisana w ramach bootcampu z wykorzystaniem
+                                Bootstrapa
+                                oraz JavaScript. Projekt pozwolił mi przećwiczyć tworzenie zmiennych, instrukcji
+                                warunkowych
                                 if, swich oraz definiowanie funkcji a także manipulację elementami DOM. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
@@ -281,14 +321,17 @@
                         </a>
                     </div>
                 </div>
-                <div class="project-5">
+                <div class="project-6">
                     <img src="images/projects/KanbanBoard.png" alt="Kanban-Board">
                     <div class="details">
                         <div class="description">
                             <h4>Kanban Board</h4>
-                            <p>Aplikacja Kanban Board służy do zarządzania zadaniami i projektami. Projekt ten został zaprogramowany
-                                w ramach bootcampu. W projekcie jest użyty jQuery oraz jQueryUI. Layout oraz grafika opracowana
-                                została samodzielnie. Wykonanie projektu pozwoliło mi poznać podstawy działania komunikacji
+                            <p>Aplikacja Kanban Board służy do zarządzania zadaniami i projektami. Projekt ten został
+                                zaprogramowany
+                                w ramach bootcampu. W projekcie jest użyty jQuery oraz jQueryUI. Layout oraz grafika
+                                opracowana
+                                została samodzielnie. Wykonanie projektu pozwoliło mi poznać podstawy działania
+                                komunikacji
                                 z serwerem za pomocą Ajax oraz API. </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
@@ -307,11 +350,10 @@
                             </button>
                         </a>
                     </div>
-                    <div class="project-6"></div>
-                    <!-- empty for next projects-->
                 </div>
+                
+                <!-- empty for next projects-->
             </div>
-        </div>
     </section>
     <!-- FINISH PROJECTS SECTION -->
     <section id="contact" class="contact">
