Edit text of project4

--- a/index.html
+++ b/index.html
@@ -269,30 +269,31 @@
                     </div>
                 </div>
                 <div class="project-4">
-                        <img src="images/projects/Bootstrap4_template.png" alt="Bootstrap4 template">
-                        <div class="details">
-                            <div class="description">
-                                <h4>Szablon w Bootstrap 4</h4>
-                                <p>Projekt jest wykonany za pomocą Bootsrap 4. Style oraz pozycjonowanie elementów szablonu
-                                    jest uzykane praktycznie całkowice za pomocą klas Bootsrapa. W projekcie utworzono tylko kilka
-                                    własnych klas w Sass. RWD utworzone za pomocą systemu grid Bootstrapa oprtego o Flexbox.</p>
-                                <i class="devicon-html5-plain-wordmark"></i>
-                                <i class="devicon-css3-plain-wordmark"></i>
-                                <i class="devicon-bootstrap-plain"></i>
-                                <i class="devicon-git-plain"></i>
-                            </div>
-                            <a href="https://katarzynka1234.github.io/website_template_Bootstrap_4/." target="_blank">
-                                <button class="icon-link">
-                                    <i class="fa fa-desktop"></i>
-                                </button>
-                            </a>
-                            <a href="https://github.com/katarzynka1234/website_template_Bootstrap_4" target="_blank">
-                                <button class="icon-link">
-                                    <i class="fa fa-code"></i>
-                                </button>
-                            </a>
+                    <img src="images/projects/Bootstrap4_template.png" alt="Bootstrap4 template">
+                    <div class="details">
+                        <div class="description">
+                            <h4>Szablon w Bootstrap 4</h4>
+                            <p>Projekt jest wykonany za pomocą Bootsrap 4. Style oraz pozycjonowanie elementów szablonu
+                                jest uzykane głównie za pomocą klas Bootsrapa. W projekcie utworzono tylko kilka
+                                własnych klas w Sass. RWD utworzone za pomocą nowego systemu grid Bootstrapa opartego o
+                                Flexbox.</p>
+                            <i class="devicon-html5-plain-wordmark"></i>
+                            <i class="devicon-css3-plain-wordmark"></i>
+                            <i class="devicon-bootstrap-plain"></i>
+                            <i class="devicon-git-plain"></i>
                         </div>
+                        <a href="https://katarzynka1234.github.io/website_template_Bootstrap_4/." target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-desktop"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/katarzynka1234/website_template_Bootstrap_4" target="_blank">
+                            <button class="icon-link">
+                                <i class="fa fa-code"></i>
+                            </button>
+                        </a>
                     </div>
+                </div>
                 <div class="project-5">
                     <img src="images/projects/Rock_Paper_Scissors.png" alt="Rock,Papaer, Scissors">
                     <div class="details">
@@ -351,7 +352,7 @@
                         </a>
                     </div>
                 </div>
-                
+
                 <!-- empty for next projects-->
             </div>
     </section>
