Remove project 6 in PL and EN

--- a/index-en.html
+++ b/index-en.html
@@ -221,7 +221,8 @@
                         <div class="description">
                             <h4>Form reservation</h4>
                             <p>The project allow me to practice the ability to create forms using Bootstrap and jQuery.
-                                The form has validation on the filling side. The project is RWD. Styles created by compiled
+                                The form has validation on the filling side. The project is RWD. Styles created by
+                                compiled
                                 Sass to CSS. The project has a version control system Git. . </p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
@@ -249,7 +250,8 @@
                             <h4>Bootsrap 4 template</h4>
                             <p>The project is made with Bootsrap 4. The style and positioning of the template elements
                                 is used main with Bootsrap classes. Only a few classes have
-                                been created in Sass. RWD is created by using a new Bootstrap grid system based on Flexbox.</p>
+                                been created in Sass. RWD is created by using a new Bootstrap grid system based on
+                                Flexbox.</p>
                             <i class="devicon-html5-plain-wordmark"></i>
                             <i class="devicon-css3-plain-wordmark"></i>
                             <i class="devicon-bootstrap-plain"></i>
@@ -296,38 +298,6 @@
                             </button>
                         </a>
                     </div>
-                </div>
-                <div class="project-6">
-                    <img src="images/projects/KanbanBoard.png" alt="Kanban Board">
-                    <div class="details">
-                        <div class="description">
-                            <h4>Kanban Board</h4>
-                            <p>Kanban Board is used to manage tasks and projects. The project has been programmed
-                                during the
-                                bootcamp. The application uses jQuery and jQueryUI. Layout and graphics designed by
-                                myself
-                                with Sass compiled to CSS. The project allow me to learn the basics of communication
-                                with
-                                the server by Ajax and API.
-                            </p>
-                            <i class="devicon-html5-plain-wordmark"></i>
-                            <i class="devicon-css3-plain-wordmark"></i>
-                            <i class="devicon-bootstrap-plain"></i>
-                            <i class="devicon-jquery-plain-wordmark"></i>
-                            <i class="devicon-git-plain"></i>
-                        </div>
-                        <a href="https://katarzynka1234.github.io/Kanban-Board/" target="_blank">
-                            <button class="icon-link">
-                                <i class="fa fa-desktop"></i>
-                            </button>
-                        </a>
-                        <a href="https://github.com/katarzynka1234/Kanban-Board" target="_blank">
-                            <button class="icon-link">
-                                <i class="fa fa-code"></i>
-                            </button>
-                        </a>
-                    </div>
-                    <div class="project-6"></div>
                 </div>
             </div>
         </div>
